--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
             <div id="promotion-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../pics/bg-carousel-pic-1.jpg" class="d-block w-100" alt="promotional photo">
+                        <img src="pics/bg-carousel-pic-1.jpg" class="d-block w-100" alt="promotional photo">
                         <div class="carousel-caption d-none d-md-block ">
                             <h2>Be YOU</h2>
                             <p>Rock Smagums.</p>
@@ -12,11 +12,11 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../pics/bg-carousel-pic-2.jpg" class="d-block w-100"
+                        <img src="pics/bg-carousel-pic-2.jpg" class="d-block w-100"
                             alt="streetwear promotional photo">
                     </div>
                     <div class="carousel-item">
-                        <img src="../pics/bg-carousel-pic-3.jpg" class="d-block w-100"
+                        <img src="pics/bg-carousel-pic-3.jpg" class="d-block w-100"
                             alt="shoes promotional photo">
                     </div>
                 </div>
