change the nav bar, rady to add new content

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,15 +13,18 @@
 
 <body>
     <!-- navigation -->
-    <nav class="navbar navbar-dark bg-dark text-light">
-        <h1>SMAGUMS</h1>
+    <nav class="navbar navbar-dark text-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">SMAGUMS</span>
+        </div>
     </nav>
     {{!-- page content  --}}
-    {{!-- testung  --}}
     {{{ body }}}
     <!-- footer -->
     <footer div class="navbar navbar-dark bg-dark text-light">
-        <h1>SMAGUMS</h1>
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">SMAGUMS</span>
+        </div>
     </footer>
 
     {{!-- scripts  --}}
