--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,14 +2,15 @@
   box-sizing: border-box;
 }
 
-.carousel-caption {
-  top: 1.5rem;
-  font-size: 3rem;
-  left: 10%;
-  right: auto;
+a {
+  text-decoration: none;
+  color: white;
 }
-.carousel-caption h2,
-.carousel-caption p {
-  background-color: bisque;
-  padding: 1.5rem;
+
+.nav-link {
+  color: white;
+}
+
+.nav-link:hover {
+  color: white;
 }
