--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,18 +6,20 @@
                     <div class="carousel-item active">
                         <img src="pics/bg-carousel-pic-1.jpg" class="d-block w-100" alt="promotional photo">
                         <div class="carousel-caption d-none d-md-block ">
-                            <h2>Be YOU</h2>
-                            <p>Rock Smagums.</p>
-                            <a href="/shop">Get Smagums</a>
+                            
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="pics/bg-carousel-pic-2.jpg" class="d-block w-100"
-                            alt="streetwear promotional photo">
+                        <img src="pics/bg-carousel-pic-2.jpg" class="d-block w-100" alt="streetwear promotional photo">
+                        <div class="carousel-caption d-none d-md-block ">
+                        
+                        </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="pics/bg-carousel-pic-3.jpg" class="d-block w-100"
-                            alt="shoes promotional photo">
+                        <img src="pics/bg-carousel-pic-3.jpg" class="d-block w-100" alt="shoes promotional photo">
+                        <div class="carousel-caption d-none d-md-block ">
+                        
+                        </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#promotion-carousel"
@@ -29,7 +31,6 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 </button>
             </div>
-            <a class="btn" href="/shop">Get Smagums</a>
         </div>
     </div>
 </div>
