--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,18 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 m-0 p-0">
             <div id="promotion-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="pics/bg-carousel-pic-1.jpg" class="d-block w-100" alt="promotional photo">
-                        <div class="carousel-caption d-none d-md-block ">
-                            
+                        <div class="carousel-caption d-none d-xs-block bg-dark">
+                            text
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="pics/bg-carousel-pic-2.jpg" class="d-block w-100" alt="streetwear promotional photo">
-                        <div class="carousel-caption d-none d-md-block ">
-                        
+                        <div class="carousel-caption d-none d-xs-block bg-dark">
+                            text
                         </div>
                     </div>
                     <div class="carousel-item">
