--- a/views/shop.handlebars
+++ b/views/shop.handlebars
@@ -22,27 +22,27 @@
                         <h3>Product Type</h3>
                         <ul class="list-group">
                             <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="tshirts">
-                                <label class="form-check-label" for="tshirts">
-                                    T-Shirts
+                                <input class="form-check-input" type="checkbox" id="shirts">
+                                <label class="form-check-label" for="shirts">
+                                    Shirts
                                 </label>
                             </li>
                             <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="tshirts">
-                                <label class="form-check-label" for="tshirts">
-                                    T-Shirts
+                                <input class="form-check-input" type="checkbox" id="jackets">
+                                <label class="form-check-label" for="jackets">
+                                    Jackets
                                 </label>
                             </li>
                             <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="tshirts">
-                                <label class="form-check-label" for="tshirts">
-                                    T-Shirts
+                                <input class="form-check-input" type="checkbox" id="bottoms">
+                                <label class="form-check-label" for="bottoms">
+                                    Bottoms
                                 </label>
                             </li>
                             <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="tshirts">
-                                <label class="form-check-label" for="tshirts">
-                                    T-Shirts
+                                <input class="form-check-input" type="checkbox" id="shoes">
+                                <label class="form-check-label" for="shoes">
+                                    shoes
                                 </label>
                             </li>
                         </ul>
