added more styling to the fron end via bootstrap, will add more content

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,22 +3,37 @@
         <div class="col-12 m-0 p-0">
             <div id="promotion-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active position-relative">
                         <img src="pics/bg-carousel-pic-1.jpg" class="d-block w-100" alt="promotional photo">
-                        <div class="carousel-caption d-none d-xs-block bg-dark">
-                            text
+                        <div class="carousel-caption d-none d-md-block bg-light position-absolute top-0 w-25 h-25">
+                            <div class="text-dark fs-4 w-100">
+                                Get The Latest Style's Without The Hassle
+                            </div>
+                            <a href="/shop" class="btn btn-dark mt-2">
+                                Shop Looks
+                            </a>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item position-relative">
                         <img src="pics/bg-carousel-pic-2.jpg" class="d-block w-100" alt="streetwear promotional photo">
-                        <div class="carousel-caption d-none d-xs-block bg-dark">
-                            text
+                        <div class="carousel-caption d-none d-md-block bg-dark position-absolute bottom-25 end-0 w-25 h-auto">
+                            <div class="text-light fs-4">
+                                Men's Fashion 
+                            </div>
+                            <a href="/shop" class="btn btn-light mt-4">
+                                Shop Looks
+                            </a>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item position-relative">
                         <img src="pics/bg-carousel-pic-3.jpg" class="d-block w-100" alt="shoes promotional photo">
-                        <div class="carousel-caption d-none d-md-block ">
-                        
+                        <div class="carousel-caption d-none d-md-block bg-dark position-absolute w-25">
+                            <div class="text-light fs-4">
+                                Shoe's, Outfit's and More
+                            </div>
+                            <a href="/shop" class="btn btn-light mt-4">
+                                Shop Looks
+                            </a>
                         </div>
                     </div>
                 </div>
