--- a/views/shop.handlebars
+++ b/views/shop.handlebars
@@ -1,9 +1,9 @@
 <main class="container-fluid">
     <div class="row">
         <section class="col-sm-12 col-md-4">
-            <div class="container menu-form">
+            <div class="container menu-form overflow-scroll">
                 <form>
-                    <div class="gender border-bottom mb-3">
+                    <div class="gender border-bottom mb-3 pb-3 d-md-block">
                         <h3>Gender</h3>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="men">
@@ -18,7 +18,7 @@
                             </label>
                         </div>
                     </div>
-                    <div class="product border-bottom mb-3">
+                    <div class="product border-bottom mb-3 pb-3 d-md-block">
                         <h3>Product Type</h3>
                         <ul class="list-group">
                             <li class="list-group-item">
@@ -47,8 +47,41 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="price border-bottom mb-3"></div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <div class="brand border-bottom mb-3 pb-3 d-md-block">
+                        <h3>Brand Name</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" id="ASOS">
+                                <label class="form-check-label" for="ASOS">
+                                    ASOS Designs
+                                </label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="price pb-3 d-md-block">
+                        <h3>Price</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" id="sale">
+                                <label class="form-check-label" for="sale">
+                                    Sale Items
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" id="regular">
+                                <label class="form-check-label" for="regular">
+                                    $50 to $99
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" id="expensive">
+                                <label class="form-check-label" for="expensive">
+                                    $100 or More
+                                </label>
+                            </li>
+                        </ul>
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-3 d-md-block">Submit</button>
                 </form>
             </div>
         </section>
