--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,48 +17,53 @@
   <body>
     <!-- navigation -->
     <nav class="navbar bg-dark text-light">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">
-                <a href="/">SMAGUMS</a>
-            </span>
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="/shop">SHOP</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">LOGIN</a>
-                </li>
-            </ul>
-        </div>
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">
+          <a href="/">SMAGUMS</a>
+        </span>
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="/shop">SHOP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">LOGIN</a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
-    {{!-- page content  --}}
-    {{{ body }}}
-    {{!-- end page content --}}
+    {{! page content  }}
+    {{{body}}}
+    {{! end page content }}
 
     <!-- footer -->
     <footer div class="navbar bg-dark">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">
-                <a href="/">SMAGUMS</a>
-            </span>
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="/shop">SHOP</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">LOGIN</a>
-                </li>
-            </ul>
-        </div>
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">
+          <a href="/">SMAGUMS</a>
+        </span>
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="/shop">SHOP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">LOGIN</a>
+          </li>
+        </ul>
+      </div>
     </footer>
 
-    {{!-- scripts --}}
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
-</body>
+    {{! scripts }}
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
