--- a/views/shop.handlebars
+++ b/views/shop.handlebars
@@ -1,92 +1,101 @@
 <main class="container-fluid">
-    <div class="row">
-        <section class="col-sm-12 col-md-4">
-            <div class="container menu-form overflow-scroll">
-                <form>
-                    <div class="gender border-bottom mb-3 pb-3 d-md-block">
-                        <h3>Gender</h3>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="men">
-                            <label class="form-check-label" for="men">
-                                Men
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="women">
-                            <label class="form-check-label" for="women">
-                                Women
-                            </label>
-                        </div>
-                    </div>
-                    <div class="product border-bottom mb-3 pb-3 d-md-block">
-                        <h3>Product Type</h3>
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="shirts">
-                                <label class="form-check-label" for="shirts">
-                                    Shirts
-                                </label>
-                            </li>
-                            <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="jackets">
-                                <label class="form-check-label" for="jackets">
-                                    Jackets
-                                </label>
-                            </li>
-                            <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="bottoms">
-                                <label class="form-check-label" for="bottoms">
-                                    Bottoms
-                                </label>
-                            </li>
-                            <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="shoes">
-                                <label class="form-check-label" for="shoes">
-                                    shoes
-                                </label>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="brand border-bottom mb-3 pb-3 d-md-block">
-                        <h3>Brand Name</h3>
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="ASOS">
-                                <label class="form-check-label" for="ASOS">
-                                    ASOS Designs
-                                </label>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="price pb-3 d-md-block">
-                        <h3>Price</h3>
-                        <ul class="list-group">
-                            <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="sale">
-                                <label class="form-check-label" for="sale">
-                                    Sale Items
-                                </label>
-                            </li>
-                            <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="regular">
-                                <label class="form-check-label" for="regular">
-                                    $50 to $99
-                                </label>
-                            </li>
-                            <li class="list-group-item">
-                                <input class="form-check-input" type="checkbox" id="expensive">
-                                <label class="form-check-label" for="expensive">
-                                    $100 or More
-                                </label>
-                            </li>
-                        </ul>
-                    </div>
-                    <button type="submit" class="btn btn-primary mb-3 d-md-block">Submit</button>
-                </form>
+  <div class="row">
+    <section class="col-sm-12 col-md-4">
+      <div class="container menu-form overflow-scroll">
+        <form>
+          <div class="gender border-bottom mb-3 pb-3 d-md-block">
+            <h3>Gender</h3>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="men" />
+              <label class="form-check-label" for="men">
+                Men
+              </label>
             </div>
-        </section>
-        <section class="col-sm-12 col-md-8">
-            <h1>products</h1>
-        </section>
-    </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="women" />
+              <label class="form-check-label" for="women">
+                Women
+              </label>
+            </div>
+          </div>
+          <div class="product border-bottom mb-3 pb-3 d-md-block">
+            <h3>Product Type</h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" id="shirts" />
+                <label class="form-check-label" for="shirts">
+                  Shirts
+                </label>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" id="jackets" />
+                <label class="form-check-label" for="jackets">
+                  Jackets
+                </label>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" id="bottoms" />
+                <label class="form-check-label" for="bottoms">
+                  Bottoms
+                </label>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" id="shoes" />
+                <label class="form-check-label" for="shoes">
+                  shoes
+                </label>
+              </li>
+            </ul>
+          </div>
+          <div class="brand border-bottom mb-3 pb-3 d-md-block">
+            <h3>Brand Name</h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" id="ASOS" />
+                <label class="form-check-label" for="ASOS">
+                  ASOS Designs
+                </label>
+              </li>
+            </ul>
+          </div>
+          <div class="price pb-3 d-md-block">
+            <h3>Price</h3>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" id="sale" />
+                <label class="form-check-label" for="sale">
+                  Sale Items
+                </label>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" id="regular" />
+                <label class="form-check-label" for="regular">
+                  $50 to $99
+                </label>
+              </li>
+              <li class="list-group-item">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="expensive"
+                />
+                <label class="form-check-label" for="expensive">
+                  $100 or More
+                </label>
+              </li>
+            </ul>
+          </div>
+          <button
+            type="submit"
+            id="get-product"
+            class="btn btn-primary mb-3 d-md-block"
+          >Submit</button>
+        </form>
+      </div>
+    </section>
+    <section class="col-sm-12 col-md-8">
+      <h1>products</h1>
+      <div id="single-product"></div>
+    </section>
+  </div>
 </main>
