refactor scripts.js

--- a/views/shop.handlebars
+++ b/views/shop.handlebars
@@ -87,7 +87,8 @@
         </section>
         <section class="col-sm-12 col-md-8">
             <h1>products</h1>
-            <div class="products"></div>
+            {{!-- display products here  --}}
+            <div id="products"></div>
         </section>
     </div>
 </main>
