refactor script js again

--- a/views/shop.handlebars
+++ b/views/shop.handlebars
@@ -56,6 +56,24 @@
                                     ASOS Designs
                                 </label>
                             </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" id="Vans">
+                                <label class="form-check-label" for="Vans">
+                                    Vans
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" id="Nike">
+                                <label class="form-check-label" for="Nike">
+                                    Nike
+                                </label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input" type="checkbox" id="Lacoste">
+                                <label class="form-check-label" for="Lacoste">
+                                    Lacoste
+                                </label>
+                            </li>
                         </ul>
                     </div>
                     <div class="price pb-3 d-md-block">
