--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
             <a class="nav-link" href="/shop">SHOP</a>
           </li>
           <li class="nav-item">
-            <button id="logout" class="btn-no-style nav-link">logout</button>
+            <a id="logout" class="btn nav-link">logout</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/login">LOGIN</a>
