--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -35,7 +35,7 @@
     </div>
     <div class="input-group">
       <div class="input-group-text">
-        <label for="email-signup">Username</label>
+        <label for="email-signup">Email</label>
       </div>
       <input
         type="text"
