fixed single page routes and view, and added front end jaavascriot code for the single page must finish search by query

--- a/views/singlepage.handlebars
+++ b/views/singlepage.handlebars
@@ -1,2 +1,8 @@
-<p>Single page</p>
-<p>product page </p>
+<h1>Product Page</h1>
+{{! display products here  }}
+<div class="row">
+    <section class="col-12">
+        <div id="single-product"></div>
+    </section>
+</div>
+
