--- a/views/shop.handlebars
+++ b/views/shop.handlebars
@@ -8,26 +8,26 @@
             <h3>Product Type</h3>
             <ul class="list-group">
               <li class="list-group-item">
-                <input class="form-check-input" type="radio" id="shirts" />
                 <label class="form-check-label" for="shirts">
-                  Shirts
+                  <input class="form-check-input" type="checkbox" id="shirts" />
+                  shirts
                 </label>
               </li>
               <li class="list-group-item">
-                <input class="form-check-input" type="radio" id="jackets" />
                 <label class="form-check-label" for="jackets">
-                  Jackets
+                  <input class="form-check-input" type="checkbox" id="jackets" />
+                  jackets
                 </label>
               </li>
               <li class="list-group-item">
-                <input class="form-check-input" type="radio" id="bottoms" />
                 <label class="form-check-label" for="bottoms">
-                  Bottoms
+                  <input class="form-check-input" type="checkbox" id="bottoms" />
+                  bottoms
                 </label>
               </li>
               <li class="list-group-item">
-                <input class="form-check-input" type="radio" id="shoes" />
                 <label class="form-check-label" for="shoes">
+                  <input class="form-check-input" type="checkbox" id="shoes" />
                   shoes
                 </label>
               </li>
@@ -38,27 +38,33 @@
             <h3>Brand Name</h3>
             <ul class="list-group">
               <li class="list-group-item">
-                <input class="form-check-input" type="radio" id="ASOS" />
-                <label class="form-check-label" for="ASOS">
-                  ASOS Designs
+                <label class="form-check-label" for="ASOSDesign">
+                  <input class="form-check-input" type="checkbox" id="ASOS" />
+                  ASOS Design
                 </label>
               </li>
               <li class="list-group-item">
-                <input class="form-check-input" type="radio" id="Vans" />
                 <label class="form-check-label" for="Vans">
+                  <input class="form-check-input" type="checkbox" id="Vans" />
                   Vans
                 </label>
               </li>
               <li class="list-group-item">
-                <input class="form-check-input" type="radio" id="Nike" />
                 <label class="form-check-label" for="Nike">
+                  <input class="form-check-input" type="checkbox" id="Nike" />
                   Nike
                 </label>
               </li>
               <li class="list-group-item">
-                <input class="form-check-input" type="radio" id="Lacoste" />
                 <label class="form-check-label" for="Lacoste">
+                  <input class="form-check-input" type="checkbox" id="Lacoste" />
                   Lacoste
+                </label>
+              </li>
+              <li class="list-group-item">
+                <label class="form-check-label" for="TedBaker">
+                  <input class="form-check-input" type="checkbox" id="TedBaker" />
+                  Ted Baker
                 </label>
               </li>
             </ul>
